# arkanoid

./: .editorconfig  .gitignore  CMakeLists.txt  Makefile  README.md  arkanoid.cpp  ball.cpp  ball.h  board.cpp  board.h  bonus.cpp  bonus.h  brick.cpp  brick.h  brick_types.cpp  brick_types.h  drawable.cpp  drawable.h  eventmanager.cpp  eventmanager.h  game.cpp  game.h  graphicmanager.cpp  graphicmanager.h  laser.cpp  laser.h  player.cpp  player.h  sprite.cpp  sprite.h  windowmanager.cpp  windowmanager.h
levels/: 1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt
